<resources>
    <string name="app_name">NewsFeedApp</string>
    <string name="title">Title</string>
    <string name="categories">Categories</string>
    <string name="published">17/07/2018</string>
    <string name="author">Author</string>
    <string name="interpoint">&#183;</string>
    <string name="thumbnail">thumbnail</string>
    <string name="no_internet">Check your internet connection, swipe down to refresh</string>
    <string name="no_articles">No articles found, swipe down to refresh</string>
    <string name="content">Content</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_categories_label">Categories</string>
    <string name="settings_categories_key" translatable="false">categories</string>
    <string name="settings_categories_default" translatable="false">@string/settings_categories_recent_value</string>
    <string name="settings_categories_recent_label">Most recent</string>
    <string name="settings_categories_recent_value" translatable="false">recent</string>
    <string name="settings_categories_world_news_label">World news</string>
    <string name="settings_categories_world_news_value" translatable="false">world</string>
    <string name="settings_categories_uk_news_label">UK news</string>
    <string name="settings_categories_uk_news_value" translatable="false">uk-news</string>
    <string name="settings_categories_technology_label">Technology</string>
    <string name="settings_categories_technology_value" translatable="false">technology</string>
    <string name="settings_categories_business_label">Business</string>
    <string name="settings_categories_business_value" translatable="false">business</string>
    <string name="settings_categories_environment_label">Environment</string>
    <string name="settings_categories_environment_value" translatable="false">environment</string>
    <string name="settings_categories_football_label">Football</string>
    <string name="settings_categories_football_value" translatable="false">football</string>
    <string name="settings_categories_books_label">Books</string>
    <string name="settings_categories_books_value" translatable="false">books</string>
    <string name="settings_categories_music_label">Music</string>
    <string name="settings_categories_music_value" translatable="false">music</string>
    <string name="settings_categories_film_label">Film</string>
    <string name="settings_categories_film_value" translatable="false">film</string>
    <string name="settings_categories_games_label">Games</string>
    <string name="settings_categories_games_value" translatable="false">games</string>
    <string name="settings_categories_travel_label">Travel</string>
    <string name="settings_categories_travel_value" translatable="false">travel</string>
    <string name="n_a">N/A</string>
    <string name="just_now">Just now</string>
    <string name="search_for">Search for&#160;</string>
    <string name="api_key">aeeecf4b-8953-4a2b-850d-f2fabdadc38c</string>
    <string name="search_src_text">android:id/search_src_text</string>
    <string name="unknown_author" >Unknown author</string>
</resources>
